# xfer

./: .gitignore  AGENTS.md  Cargo.toml  HOW_IT_WORKS.md  README.md  build.rs  install.sh  wrapper.h
.github/scripts/: install-level-zero.sh
.github/workflows/: ci.yml  release.yml
src/: benchmark.rs  bootstrap.rs  cli.rs  histogram.rs  level_zero.rs  lib.rs  main.rs  output.rs  pcie.rs  stats.rs
src/benchmark/: analyze.rs  command.rs  error.rs  event.rs  execute.rs  host.rs  measurement.rs  mod.rs  plan.rs  sampling.rs  saturation.rs  topology.rs  verify.rs
src/diagnostics/: counter.rs  mod.rs  model.rs  progress.rs  verdict.rs
src/evidence/: acs.rs  counters.rs  cpu.rs  error.rs  linux_perf.rs  linux_pmu.rs  mod.rs
src/evidence/intel_perfmon/: generated.rs  mod.rs
src/output/: csv.rs  diagnostic_progress.rs  diagnostics.rs  mod.rs  model.rs  progress.rs  terminal.rs  text.rs
tools/: update_perfmon_events.py
