[package]
name = "xfer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[dependencies]
indicatif = { version = "0.18.6", default-features = false, features = ["unicode-width"] }

[build-dependencies]
bindgen = "0.72"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
